tabs layout issues

--- a/projects/OG-Web/web-engine/prototype/styles/analytics/og.analytics.gadget.OG-gadget-tabs.css
+++ b/projects/OG-Web/web-engine/prototype/styles/analytics/og.analytics.gadget.OG-gadget-tabs.css
@@ -25,13 +25,11 @@
 
 .OG-gadget-tabs li {
     display: inline-block;
-    float: left;
     list-style: none;
     background: #eee;
     border-top: 1px solid #d8d8d8;
     border-bottom: 1px solid #d8d8d8;
     border-right: 1px solid #d8d8d8;
-    margin-bottom: -1px;
     position: relative;
     cursor: default;
 }
